--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:palette-v7:23.1.1'
     testCompile 'junit:junit:4.12'
 }
