--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ gen/
 # Gradle files
 .gradle/
 build/
+gradle.properties
+app/release.keystore
 
 # Local configuration file (sdk path, etc)
 local.properties
