remove japanese only from release build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        resConfigs "sk", "en"
+        resConfigs "sk", "en", "ja"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         versionCode versionCodeComputed
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
@@ -33,6 +33,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+            aaptOptions {
+                ignoreAssetsPattern 'values-ja'
+            }
         }
         debug {
             versionNameSuffix "-${versionCodeComputed}"
